# DeepSQLi

./: .gitignore  Dockerfile  Dockerfile.serving-api  Dockerfile.tokenizer-api  README.md  docker-compose.yaml  models.config
.github/workflows/: test.yaml
api/: Makefile  api.py  pyproject.toml  requirements.txt  run.sh  test_api.py
dataset/: sqli_dataset2.csv
sqli_model/: keras_metadata.pb
sqli_model/1/: fingerprint.pb  saved_model.pb
sqli_model/1/assets.extra/: tf_serving_warmup_requests
sqli_model/1/variables/: variables.index
sqli_model/2/: fingerprint.pb  keras_metadata.pb  saved_model.pb
sqli_model/2/assets.extra/: tf_serving_warmup_requests
sqli_model/2/variables/: variables.index
sqli_model/3/: fingerprint.pb  saved_model.pb
sqli_model/3/assets.extra/: tf_serving_warmup_requests
sqli_model/3/variables/: variables.index
sqli_model/variables/: variables.index
training/: Makefile  README.md  pyproject.toml  requirements.txt  sql_tokenizer.py  sql_tokenizer_vocab.json  test_train.py  train.py  train_v3.py  warm_up.py
vulnerable_app/: README.md  main.py  requirements.txt
