[tool.poetry]
name = "training"
version = "0.1.0"
description = "Deep learning model for detecting SQLi attacks"
authors = ["Mostafa Moradian <<mostafa@gatewayd.io>>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.16.1"
scikit-learn = "^1.4.2"
pandas = "^2.2.2"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
